# neuronpedia

./: .env.inference.deepseek-r1-distill-llama-8b.llamascope-slimpj-openr1-res-32k  .env.inference.deepseek-r1-distill-llama-8b.llamascope-slimpj-res-32k  .env.inference.gemma-2-9b-it.gemmascope-res-16k  .env.inference.gemma-2-9b.gemmascope-res-16k  .env.inference.gemma-3-27b-it.gemmascope-2-res-16k  .env.inference.gemma-3-27b-it.gemmascope-2-res-65k  .env.inference.gemma-3-4b-it.gemmascope-2-res-16k  run_deepseek.sh  run_gemini.sh  run_gemma-3-27b.sh  run_gemma-3-4b.sh
apps/inference/: Dockerfile  pyproject.toml
apps/inference/neuronpedia_inference/: config.py  sae_manager.py  server.py  shared.py  utils.py
apps/inference/neuronpedia_inference/endpoints/activation/: all.py  all_batch.py  source.py  topk_by_token.py  topk_by_token_batch.py
apps/inference/neuronpedia_inference/endpoints/persona/: monitor.py
apps/inference/neuronpedia_inference/endpoints/steer/: completion_chat.py
apps/inference/neuronpedia_inference/endpoints/util/: sae_decoder_vectors.py
apps/sparsity/: README.md  __init__.py  pyproject.toml  server.py
apps/webapp/: package-lock.json  package.json
apps/webapp/app/: page.tsx
apps/webapp/app/api/admin/import/: route.ts
apps/webapp/components/: activation-item.tsx  activations-list.tsx  feature-stats.tsx
apps/webapp/components/panes/: connected-neurons-pane.tsx
apps/webapp/components/steer/: steerer.tsx
apps/webapp/lib/: env.ts
utils/neuronpedia-utils/: pyproject.toml
utils/neuronpedia-utils/neuronpedia_utils/: batch-autointerp.py
(+5 files in other folders)
